sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (list: Array[Char])Array[Char].
Unspecified value parameter list.
		bubbleSort();
                          ^AlgBubbleSort1:7: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
    for (i<-1.to getNombreValeurs(temp)-1){
              ^AlgBubbleSort1:7: error: value - is not a member of Array[Char]
    for (i<-1.to getNombreValeurs(temp)-1){
                                       ^AlgBubbleSort1:14: error: not found: value k
  }while(k!=0)
         ^